# x86sim

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  GNUmakefile  Makefile  README.md  pyproject.toml
.githooks/: pre-commit
.github/workflows/: bindings.yml  docs.yml  executable.yml  tests.yml
cmake/: GitRevision.cmake
examples/linux-x86_64/: echo.S  hello_syscalls.S
include/vcore/: logging.h  vcore.hpp
include/x86sim/: addrspace.hpp  logging.h  logging.hpp  registerfile.hpp  x86sim.hpp
include/x86sim-support/: cpuid.hpp  syscall-linux-posix.hpp  syscall-linux.hpp
pyraspsim/: README.md  pyproject.toml
pyraspsim/raspsim/: pyraspsim.cpp
pyraspsim/src/: binding.cpp
pyraspsim/x86sim/: __init__.py  __main__.py  elf.py  machinetypes.py  raspsim.py  simcompile.py  utils.py
src/: addrspace.cpp  addrspace.h  branchpred.cpp  branchpred.h  config.cpp  config.h  dcache-amd-k8.h  dcache.cpp  dcache.h  decode-complex.cpp  decode-core.cpp  decode-fast.cpp  decode-sse.cpp  decode-x87.cpp  decode.h  globals.h  logic.h  mm.cpp  mm.h  ooocore-amd-k8.h  ooocore.cpp  ooocore.h  oooexec.cpp  ooopipe.cpp  ptlhwdef.cpp  ptlhwdef.h  ptlsim-api.h  ptlsim.cpp  ptlsim.h  raspsim-hwsetup.cpp  raspsim-hwsetup.h  raspsim.cpp  seqcore.cpp  seqcore.h  stats.h  superstl.cpp  superstl.h  syscalls.cpp  syscalls.h  typedefs.h  (+1 more)
src/bindings/: binding.cpp
src/raspsim/: config.cpp  config.h  raspsim-hwsetup.cpp  raspsim.cpp
src/vcore/: addrspace.cpp  addrspace.h  branchpred.cpp  branchpred.h  dcache.cpp  dcache.h  decode-complex.cpp  decode-core.cpp  decode-fast.cpp  decode-sse.cpp  decode-x87.cpp  decode.h  globals.h  logging.h  logic.h  ooocore.cpp  ooocore.h  oooexec.cpp  ooopipe.cpp  ptlhwdef.cpp  ptlhwdef.h  ptlsim-api.h  ptlsim.cpp  ptlsim.h  registers.def  seqcore.cpp  seqcore.h  stats.h  superstl.cpp  superstl.h  typedefs.h  uopimpl.cpp  vcore.cpp
src/vcore/internal/: ooopipe.cpp  ptlhwdef.h
src/x86sim/: addrspace.cpp  addrspace.h  branchpred.cpp  branchpred.h  dcache.cpp  dcache.h  decode-complex.cpp  decode-core.cpp  decode-fast.cpp  decode-sse.cpp  decode-x87.cpp  decode.h  globals.h  logic.h  ooocore.cpp  ooocore.h  oooexec.cpp  ooopipe.cpp  ptlhwdef.cpp  ptlhwdef.h  ptlsim-api.h  ptlsim.cpp  ptlsim.h  registerfile.cpp  seqcore.cpp  seqcore.h  stats.h  superstl.cpp  superstl.h  typedefs.h  uopimpl.cpp  x86sim.cpp
src/x86sim-linux/: x86sim-linux.cpp
src/x86sim-support/: cpuid.cpp  syscall-linux-detail.hpp  syscall-linux-posix.cpp  syscall-linux.cpp
tests/semantics/: test_cmpxchg_xadd_reg2reg.c  test_neg.c  test_xlat.c
tests/sqlite3/: CMakeLists.txt  run_sqlite_tests.sh  testrunner.tcl
tools/: bisect.sh  clang-format.sh
x86sim/: README.md  __init__.py  __main__.py  elf.py  machine.py  simcompile.py
