[project]
name = "x86sim"
version = "0.2.0"
authors = [
  { name="Janez Rotman", email="janez.rotman@tum.de" },
]
description = "Python bindings for the x86sim C++ library, a cycle-accurate x86-64 simulator based on PTLsim."
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
]
requires-python = ">=3.9"
dependencies = ["pyelftools"]
readme = "README.md"


[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.12"]
build-backend = "scikit_build_core.build"


[tool.scikit-build]
minimum-version = "build-system.requires"
cmake.version = ">=3.25"
cmake.source-dir = ".."
build-dir = "build/{wheel_tag}"
wheel.packages = ["x86sim"]

# Build only the Python extension against the portable core; the Linux-only
# support library, simulators, and CTest suite are unnecessary here.
cmake.define.X86SIM_BUILD_PYTHON = "ON"
cmake.define.X86SIM_BUILD_DEFAULTS = "OFF"
cmake.define.X86SIM_BUILD_RASPSIM = "OFF"
cmake.define.X86SIM_BUILD_LINUX = "OFF"
cmake.define.X86SIM_BUILD_TESTS = "OFF"
